feat: initiate foundation and components

--- a/apps/docs-raizora-design/content/docs/(brands)/raizora.mdx
+++ b/apps/docs-raizora-design/content/docs/(brands)/raizora.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Raizora
 description: Kibo UI is a custom registry of composable, accessible and open source components designed for use with shadcn/ui.
 icon: Info
 ---
