feat(lp-treon): change name and timezone

--- a/apps/lp-treonstudio/src/content/posts/4.md
+++ b/apps/lp-treonstudio/src/content/posts/4.md
@@ -50,7 +50,7 @@ Use subheadings to break up content and make it more readable. Each section shou
 
 Include images, diagrams, or even tables to enhance readability and engagement.  
 
-![Placeholder Image](https://www.lexingtonthemes.com/OpenGraph/twitter.png)  
+![Placeholder Image](https://www.treonstudio.com/OpenGraph/twitter.png)  
 *Caption: Add a relevant image to visually support your content.*  
 
 **Example Table:**  
